02_code1/grade.txt
Grading at Wed Jan 29 20:24:34 UTC 2020
Checking code1.c for legal syntax
temp.c:3:1: error: stray ‘\303’ in program
 üint max (int num1, int num2) {
 ^
temp.c:3:1: error: stray ‘\274’ in program
temp.c: In function ‘max’:
temp.c:5:12: error: ‘n’ undeclared (first use in this function)
     return n
            ^
temp.c:5:12: note: each undeclared identifier is reported only once for each function it appears in
temp.c:6:7: error: expected ‘;’ before ‘um1’
       um1;
       ^
temp.c:11:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
